--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "openai": "^6.17.0",
     "pg": "^8.18.0",
     "prisma": "^7.3.0",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
